# codebase

./: .archive_one_offs.sh  .batch_doc_processor.py  .codacy.yml  .codefactor.yml  .coderabbit.yaml  .cursorignore  .eslintrc.json  .gitignore  .gitmodules  .snyk  .temp_doc_processor.py  .temp_version_helper.py  Cyrano Modular Architecture.md  DEMO_SETUP_SUMMARY.md  Projects.code-workspace  README.md  WORKFLOW_CHANGES_SUMMARY.md  ethics.md  package-lock.json  package.json  pmd.xml  setup-database.sh  start-demo.sh  test-api.js
.cursor/: resume-marker.md
.github/: CODEOWNERS  README.md  codeql-config.yml  copilot-instructions.md  dependabot.yml
Cyrano/: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  SEMGREP_SECURITY_ANALYSIS.md  WEEK1_IMPLEMENTATION_SUMMARY.md  WEEK2_IMPLEMENTATION_SUMMARY.md  ai-errors-policy.html  docker-compose.yml  drizzle.config.ts  eslint.config.js  fly.toml  http-bridge.js  legal-comparator-client.mjs  mcp-integration.js  package-lock.json  package.json  render.yaml  tailwind.config.ts  test-all-integrations.ts  test-all-tools.ts  test-api-keys.ts  tsconfig.json  vercel.json  verify-functionality.js  vite.config.ts  vitest.config.ts
GoodCounsel/: GoodCounsel.md
Legacy/Arkiver/: .gitignore  cyrano_integration_example.py  demo_config.json  main.py  mcp_server_example.py  newarkiver.py  pyproject.toml  simple_test_config.json
Legacy/Arkiver/arkiver/: __init__.py  config.py  core.py  cyrano_integration.py  extractors.py  mcp_tools.py  outputs.py  processors.py
Legacy/Arkiver/issues/: 31.md
LexFiat/: .env.example  package.json  (+6 more)
(+1635 files in other folders)
